# guess-what

./: CMakeLists.txt  README.md  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
dialogs/: pfeiffer.dialog
items/: birgit.item  bowl.item  chair.item  default.item  soup.item  table.item
items/control_room/: analyzer.item  central_console.item  city_map.item  data_cable.item  diagnostic_terminal.item  disk.item  multimeter.item  spare_chips.item  tool_cabinet.item
items/elevator/: elevator_button.item
items/research_facility/: pfeiffer.item  phone.item
lists/: ignore.list
rooms/: corridor.room  elevator.room  living_room.room  research_facility.room  start.room  store.room  test.room
src/: CMakeLists.txt  action.hpp  choice.hpp  command.hpp  context.hpp  dialog.cpp  dialog.hpp  dialog_database.cpp  dialog_database.hpp  entry.hpp  exit.hpp  file_parser.cpp  file_parser.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  item_blueprint.cpp  item_blueprint.hpp  label.hpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  room.cpp  room.hpp  synonyms_dict.hpp  terminal.cpp  terminal.hpp  text.cpp  text.hpp  text_database.hpp  token.hpp  utils.hpp  windows.cpp  windows.hpp  word_list.hpp  world.cpp  world.hpp
synonyms/: enter.list  help.list  inventory.list  look.list  open.list  take.list  talk.list  use.list  user_manual.list
texts/: intro.txt  user_manual.txt  win.txt
