add_executable(main
        main.cpp
        parser.hpp
        parser.cpp
        command.hpp
        room.hpp
        file_parser.hpp
        file_parser.cpp
        item.cpp
        item.hpp
        world.cpp
        world.hpp
        room.cpp
        inventory.hpp
        inventory.cpp
        utils.hpp
        exit.hpp
        lexer.hpp
        token.hpp
        entry.hpp
        word_list.hpp
        synonyms_dict.hpp
)

target_link_system_libraries(main
        PRIVATE
        lib2k
        tl::optional
)
