add_executable(main
        main.cpp
        parser.hpp
        parser.cpp
        command.hpp
        room.hpp
        file_parser.hpp
        file_parser.cpp
        item.cpp
        item.hpp
        world.cpp
        world.hpp
        room.cpp
        inventory.hpp
        inventory.cpp
        utils.hpp
        exit.hpp
        lexer.hpp
        token.hpp
        entry.hpp
        word_list.hpp
        synonyms_dict.hpp
        terminal.cpp
        terminal.hpp
        text.hpp
        text.cpp
        text_database.hpp
        windows.hpp
        windows.cpp
)

target_link_system_libraries(main
        PRIVATE
        lib2k
        tl::optional
)
